# LakeWind_AI

./: .env.example  .gitignore  AUDIT_REPORT.md  Dockerfile  README.md  V3_DEPLOYMENT.md  V4_DEPLOYMENT.md  WHAT_IS_THIS.txt  docker-compose.yml  docker-entrypoint.sh  fix_on_conflict.py  pyproject.toml  settings.yaml  t420_auto_update.sh  t420_pipeline_timer.sh  t420_setup.sh  update.sh
deploy/: lakewind.service  t420_auto_update.sh  update.sh
docs/: LakeWind_Technical_Specification_v2.md  V6_IMPLEMENTATION.md
home/matteos/Scrivania/Lake_Wind_AI/lakewind-v6/lakewind/: config.py  recovery.py
lakewind/: admin.py  recovery.py  stability.py
lakewind/collector/: __init__.py  arpa_lombardia.py  base.py  cml_dervio.py  diy_buoy.py  domaso_station.py  era5_reanalysis.py  historical_backfill.py  holfuy.py  lake_water_temp.py  open_meteo.py  open_meteo_ensemble.py
lakewind/db/: access.py  freshness.py  schema.py  schema_v2.py  users.py
lakewind/features/: advanced.py  build.py  climatology.py  spatial_grid.py
lakewind/interfaces/: bot_scheduler.py  cli.py  cli_v2.py  dashboard.py  telegram_bot.py
lakewind/ml/: backtest.py  conformal.py  cpcv_backtest.py  infer.py  kalman.py  regime.py  stacking.py  train.py
lakewind/prediction/: engine.py  engine_v2.py  forecast.py
lakewind/utils/: heatmap.py  heatmap_v2.py  heatmap_v3.py  solar.py  weather.py  wind.py
scripts/: migrate_to_v4.sh  validate_points.py
web-ui/: next.config.ts
web-ui/src/app/: WindMap.tsx  page.tsx
web-ui/src/app/api/health/: route.ts
web-ui/src/app/api/points/: route.ts
web-ui/src/app/api/trend/: route.ts
web-ui/src/app/api/wind/: route.ts
(+17 files in other folders)
