[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lakewind"
version = "0.1.0"
description = "Hyperlocal wind forecasting for the Dongo-Dervio sailing corridor, Lake Como (LakeWind Technical Spec v2.0)"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "LakeWind AI" }]
license = { text = "MIT" }

dependencies = [
    "duckdb>=1.1.0",
    "pandas>=2.2",
    "numpy>=1.26",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "requests>=2.32",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "astral>=3.2",
    "pytz>=2024.1",
    "lightgbm>=4.3",
    "xgboost>=2.1",
    "scikit-learn>=1.5",
    "shap>=0.45",
    "matplotlib>=3.9",
    "scipy>=1.10",
    "shapely>=2.0",
    "typer>=0.12",
    "rich>=13.7",
    "streamlit>=1.36",
    "plotly>=5.22",
    "python-telegram-bot>=21.4",
    "apscheduler>=3.10.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "black>=24.4",
    "mypy>=1.10",
]

[project.scripts]
lakewind = "lakewind.interfaces.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["lakewind*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "W"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
